--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,12 @@
 [package]
-name = "bvh"
-description = "A fast BVH using SAH"
-version = "0.7.0"
-edition = "2018"
-authors = [
-    "Sven-Hendrik Haase <svenstaro@gmail.com>",
-    "Alexander Dmitriev <alexander.dmitriev2580@gmail.com>"
-]
+name = "bsh"
+description = "A fast BSH using SAH"
+version = "0.1.0"
+edition = "2021"
 readme = "README.md"
-repository = "https://github.com/svenstaro/bvh"
-documentation = "https://docs.rs/crate/bvh"
-keywords = ["bvh", "bounding", "volume", "sah", "aabb"]
+repository = "https://github.com/mockersf/bvh"
+documentation = "https://docs.rs/crate/bsh"
 license = "MIT"
 
 [dependencies]
-approx = "0.5"
-rand = "0.8"
-log = "0.4"
-num = "0.4"
 glam = "0.21"
-serde = { optional = true, version = "1", features = ["derive"] }
-
-[dev-dependencies]
-proptest = "1.0"
-obj-rs = "0.7"
-float_eq = "1"
-doc-comment = "0.3"
-
-[features]
-bench = []
-# Unfortunately can't use "serde" as the feature name until https://github.com/rust-lang/cargo/issues/5565 lands
-serde_impls = ["serde", "glam/serde"]
-
-[profile.release]
-lto = true
-codegen-units = 1
-
-[profile.bench]
-lto = true
-codegen-units = 1
