--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "bsh"
-description = "A fast BSH using SAH"
+name = "bvh2d"
+description = "A fast BVH using SAH for 2d"
 version = "0.1.0"
 edition = "2021"
 readme = "README.md"
-repository = "https://github.com/mockersf/bsh"
-documentation = "https://docs.rs/crate/bsh"
+repository = "https://github.com/mockersf/bvh2d"
+documentation = "https://docs.rs/crate/bvh2d"
 license = "MIT"
 
 [dependencies]
